--- a/Grievance.csproj
+++ b/Grievance.csproj
@@ -50,12 +50,17 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\avatar.png" />
+	  <None Remove="Resources\Images\dashboard.svg" />
+	  <None Remove="Resources\Images\editissue.svg" />
 	  <None Remove="Resources\Images\newarit.jpg" />
 	  <None Remove="Resources\Images\rk.jpg" />
+	  <None Remove="Resources\Images\viewissue.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="RestSharp" Version="110.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
