--- a/Grievance.csproj
+++ b/Grievance.csproj
@@ -32,10 +32,10 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+		<MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#1e9c98" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\mainlogo.jpg" />
+		<MauiSplashScreen Include="Resources\Splash\mainlogo.jpg"  BaseSize="128,128"  />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
